--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing page</title>
 </head>
 <body>
     <div class="header">
+        <h2 id="logo">Header logo</h2>
         <img> <!-- ubaci neki free logo-->
         <ul>
             <li><a href="#">header link one</a></li>
@@ -21,25 +23,27 @@
             <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
             <button class="b1">Sign up</button>
         </div>
-        <img src="" alt="">
+        <div class="placeholder">
+            <img src="" alt="">
+        </div>
     </div>
     <div class="first">
         <h1>This is some text</h1>
         <div class="images">
             <div class="image">
-                <div class="outline"><img src="" alt=""><div>
+                <div class="outline"><img src="images/barberry.png" alt=""></div>
                 <p>this is some subtext under an illustration or img </p>                
             </div>
             <div class="image">
-                <div class="outline"><img src="" alt=""><div>
+                <div class="outline"><img src="images/barberry.png" alt=""></div>
                 <p>this is some subtext under an illustration or img </p>                
             </div>
             <div class="image">
-                <div class="outline"><img src="" alt=""><div>
+                <div class="outline"><img src="images/barberry.png" alt=""></div>
                 <p>this is some subtext under an illustration or img </p>                
             </div>
             <div class="image">
-                <div class="outline"><img src="" alt=""><div>
+                <div class="outline"><img src="images/barberry.png" alt=""></div>
                 <p>this is some subtext under an illustration or img </p>                
             </div>
         </div>
@@ -49,13 +53,16 @@
         <h5>-Thor, God of Thunder</h5>
     </div>
     <div class="third">
-        <div class="blue block">
+        <div class="blue-block">
             <div>
                 <h5>Call to action! It's time!</h5>
                 <p>Sign up for our product by clicking button right over there</p>
             </div>
             <button class="b2">Sign up</button>
         </div>
+    </div>
+    <div class="footer">
+        <p>Copyright © The Odin project 2021</p>
     </div>
 </body>
 </html>
